--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="service-card">
                     <div class="service-content">
                         <div class="service-image">
-                            <img src="image\photo_2025-01-27_23-49-59.jpg" alt="Computer Access">
+                            <img src="" alt="Computer Access">
                         </div>
                         <div class="service-note">
                             <h3 class="service-title">Computer Access</h3>
@@ -103,7 +103,7 @@
                 <div class="service-card">
                     <div class="service-content">
                         <div class="service-image">
-                            <img src="image\photo_2025-01-27_23-50-09.jpg" alt="Software Tutorials">
+                            <img src="" alt="Software Tutorials">
                         </div>
                         <div class="service-note">
                             <h3 class="service-title">Software Tutorials</h3>
@@ -116,7 +116,7 @@
                 <div class="service-card">
                     <div class="service-content">
                         <div class="service-image">
-                            <img src="technical-support-image.jpg" alt="Technical Support">
+                            <img src="" alt="Technical Support">
                         </div>
                         <div class="service-card">
                             <div class="service-icon">🔧</div>
