--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="logo-wrapper">
                 <div class="logo">
-                    <img src="image/logo.jpg" alt="" style="border-radius: 50%;">
+                    <img src="image/logo.jpg" alt="">
                 </div>
                 <div>
                     <h1>Arsi University Computer Lab</h1>
@@ -389,7 +389,6 @@
                     <a href="https://linkedin.com/school/arsiuniversity " target="_blank ">LinkedIn</a>
                 </div>
             </div>
-            <br>
             <div class="internal-footer">
                 <div>
                     <h3>Subscription</h3>
@@ -530,14 +529,12 @@
     <!-- footer section -->
     <div>
 
+        <div>
+            <div class="copyright ">
+                <p>
+                    Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
 
-        <div class="copyright">
-            <p>
-                Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
-
-            <div class="footer-logo">
-                <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git"> <img src="image/github.png "
-                        alt="github Logo" style="border-radius: 50%;" /></a>
+                <img src="image/github.png " alt="github Logo " />
             </div>
         </div>
 </footer>
