--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <textarea name="" id="add" cols="100" rows="15"></textarea>
             <br>
             <br>
-            <input type="submit" value="send" id="button">
+            <input type="submit" value="send message" id="button">
         </form>
 
     </div>
