--- a/index.html
+++ b/index.html
@@ -243,34 +243,52 @@
         <!-- footer section -->
         <div class="footer-wrapper">
             <div class="internal-footer">
-                <div>
-                    <h3> Links</h3>
-                    <ul>
+                <div style="display: inline-flex;">
+                    <div>
+                        <h3> Links</h3>
+
                         <li><a href=" #home ">Home</a></li>
                         <li><a href="#about ">About</a></li>
                         <li><a href="#services ">Services</a></li>
                         <li><a href="https://www.arsiuniversity.edu " target="_blank ">Arsi University</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>Contact Us</h3>
+                    </div>
 
-                    <p>Email: support@arsiuniversity.edu</p>
-                    <p>Phone: +123-456-7890</p>
+
                 </div>
-                <div>
-                    <h3>Social Media Links</h3>
-                    <a href="https://facebook.com/arsiuniversity " target="_blank ">Facebook</a> |
-                    <a href="https://twitter.com/arsiuniversity " target="_blank ">Twitter</a> |
-                    <a href="https://linkedin.com/school/arsiuniversity " target="_blank ">LinkedIn</a>
+                <div style="display: inline-flex;">
+                    <div>
+                        <h3>Contact Us</h3>
+
+                        <p>Email: support@arsiuniversity.edu</p>
+                        <p>Phone: +123-456-7890</p>
+                    </div>
+
                 </div>
-            </div>
-            <div class="internal-footer">
+                <div style="display: inline-flex;">
+                    <div>
+                        <h3>Social Media Links</h3>
+                        <li> <a href=" https://facebook.com/arsiuniversity " target="_blank ">Facebook</a></li>
+                        <li> <a href="https://twitter.com/arsiuniversity " target="_blank ">Twitter</a></li>
+                        <li> <a href="https://linkedin.com/school/arsiuniversity " target="_blank ">LinkedIn</a>
+                        </li>
+
+
+
+
+                    </div>
+
+                </div>
+
+
                 <div>
                     <h3>Subscription</h3>
                     <form>
-                        <label for="newsletter ">Subscribe to our newsletter:</label><br>
+                        <label for="newsletter ">Subscribe to our newsletter:</label>
+                        <br>
+                        <br>
                         <input type="email " id="newsletter " placeholder="Enter your email " required>
+                        <br>
+                        <br>
                         <button type="submit ">Subscribe</button>
                     </form>
                 </div>
@@ -278,41 +296,38 @@
 
 
                 <div>
-                    <h3>Location: Arsi University, Ethiopia </h3>
+                    <h2>Location</h2>
+                    <p>Arsi University</p>
 
-                    <p><a href="https://maps.app.goo.gl/ZqdzbsXYDTTjqF1CA " target="_blank ">View on Map</a></p>
+                    <li><a href="https://maps.app.goo.gl/ZqdzbsXYDTTjqF1CA " target="_blank ">View on Map</a></li>
+
                 </div>
 
 
                 <div>
                     <h3>Privacy Policy & Terms</h3>
-                    <a href="privacy-policy.html ">Privacy Policy</a> |
-                    <a href="terms-of-service.html ">Terms of Service</a>
+                    <li> <a href="privacy-policy.html ">Privacy Policy</a></li>
+                    <li> <a href="terms-of-service.html ">Terms of Service</a></li>
+
+
                 </div>
             </div>
-
-
-
-
+            <p>Follow us on social media for updates and events.</p>
         </div>
-        </section>
 
+        <div>
 
-        </section>
-
-        <footer>
-            <!-- footer section -->
             <div>
-
-                <div>
-                    <div class="copyright ">
-                        <p>
-                            Copyright ©2024 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
-
-                        <img src="image/github.png " alt="github Logo " />
+                <div class="copyright ">
+                    <p>
+                        Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
+                    <div class="logo ">
+                        <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
                     </div>
+
                 </div>
-        </footer>
+            </div>
+    </footer>
 </body>
 
 </html>
