--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="logo-wrapper">
                 <div class="logo">
-                    <img src="image/logo.jpg" alt="">
+                    <img src="image/logo.jpg" alt="arsi university" style="border-radius: 50%;">
                 </div>
                 <div>
                     <h1>Arsi University Computer Lab</h1>
