--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@
 
         <h2>About Us</h2>
         <p>
-            The Arsi University Computer Lab Management System is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks
-            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
+            The Arsi University Computer Lab Management System is designed to enhance the experience of students and
+            staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a
+            platform that not only schedules and tracks
+            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning
+            and research.
         </p>
         <p>
-            The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
+            The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering
+            collaboration among students and faculty members. With a commitment to promoting digital literacy and
+            technological excellence, our lab system
             is a cornerstone of modern education at Arsi University.
         </p>
     </section>
@@ -80,7 +85,9 @@
                     </div>
                     <div class="service-note">
                         <h3 class="service-title">Computer Access</h3>
-                        <p class="service-description">High-performance computers available for research, programming, and general use. Whether you are working on a class project, conducting online research, or practicing coding, our systems are designed to meet your needs.</p>
+                        <p class="service-description">High-performance computers available for research, programming,
+                            and general use. Whether you are working on a class project, conducting online research, or
+                            practicing coding, our systems are designed to meet your needs.</p>
                     </div>
                 </div>
             </div>
@@ -91,7 +98,9 @@
                     <div class="service-card">
                         <div class="service-icon">📡</div>
                         <h3 class="service-title">High-Speed Internet</h3>
-                        <p class="service-description">Enjoy seamless browsing and downloads with our fast and secure internet connection. Ideal for streaming educational videos, attending online courses, or downloading essential materials without interruptions.</p>
+                        <p class="service-description">Enjoy seamless browsing and downloads with our fast and secure
+                            internet connection. Ideal for streaming educational videos, attending online courses, or
+                            downloading essential materials without interruptions.</p>
                     </div>
                 </div>
             </div>
@@ -104,7 +113,9 @@
                     </div>
                     <div class="service-note">
                         <h3 class="service-title">Software Tutorials</h3>
-                        <p class="service-description">Get guidance and tutorials on popular software and programming tools. Our tutorials cover beginner to advanced levels, including topics like word processing, spreadsheets, and coding languages.</p>
+                        <p class="service-description">Get guidance and tutorials on popular software and programming
+                            tools. Our tutorials cover beginner to advanced levels, including topics like word
+                            processing, spreadsheets, and coding languages.</p>
                     </div>
                 </div>
             </div>
@@ -118,7 +129,9 @@
                     <div class="service-card">
                         <div class="service-icon">🔧</div>
                         <h3 class="service-title">Technical Support</h3>
-                        <p class="service-description">Our experts are here to assist with hardware or software issues. Whether it’s troubleshooting a problem or providing advice on upgrades, we’ve got you covered.</p>
+                        <p class="service-description">Our experts are here to assist with hardware or software issues.
+                            Whether it’s troubleshooting a problem or providing advice on upgrades, we’ve got you
+                            covered.</p>
                     </div>
                 </div>
             </div>
@@ -127,7 +140,7 @@
     <section id="schedule">
         <div class="wrapper">
             <h2 class="lab">Lab Schedule</h2>
-            <table style="border-radius: 20px;">
+            <table>
                 <thead>
                     <tr>
                         <th>Day</th>
@@ -139,17 +152,17 @@
                     <tr>
                         <td>Monday</td>
                         <td>2:30 AM - 6:00 AM</td>
-                        <td>Introduction to Programming</td>
+                        <td>A lab class with an instructor</td>
                     </tr>
                     <tr>
                         <td>Tuesday</td>
                         <td>1:00 PM - 3:00 PM</td>
-                        <td>java programming</td>
+                        <td>E-learning session.</td>
                     </tr>
                     <tr>
                         <td>Thursday</td>
                         <td>10:00 AM - 12:00 PM</td>
-                        <td>web programing</td>
+                        <td>web development</td>
                     </tr>
                     <tr>
                         <td>Friday</td>
@@ -322,7 +335,8 @@
                     <p>
                         Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
                     <div class="logo ">
-                        <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
+                        <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png "
+                                alt="github Logo " style="border-radius: 50%; " /></a>
                     </div>
 
                 </div>
