goal section styling

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
     </section>
     <!-- Goals Section -->
 
-    <section>
-        <h2 class="style">Our Goals</h2>
+    <section class="goal-section">
+        <h2 class="style" >  Our Goals</h2>
         <div class="content">
             <h3> Provide Access to Cutting-Edge Technology</h3>
             <p>Ensure students have access to the latest hardware and software for learning and innovation.</p>
@@ -197,7 +197,7 @@
             <p>Create a platform for students to develop, showcase, and implement their technical ideas.</p>
 
 
-            <!-- Achievement section -->
+            <h1 class="style" >Achievement </h1>
 
             <h3> best Lab of the Year 2025</h3>
             <p>Awared for excellence in education and resource management at Arsi University
