--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <section>
         <!-- Home section -->
         <div id="home">
-            <h2>Welcome to Arsi University Computer Lab Management System</h2>
-            <p>This system helps manage the computer labs efficiently and effectively.</p>
-
+            <div> 
+            <h2 class="text">Welcome to Arsi University Computer Lab Website</h2>
+            <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.</p>
         </div>
     </section>
 
