--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <h2 class="text">Welcome to Arsi University Computer Lab Website</h2>
                 <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.</p>
             </div>
+        </div>
     </section>
 
     <!-- About section -->
@@ -185,9 +186,12 @@
 
             <h3>Encourage Innovation</h3>
             <p>Create a platform for students to develop, showcase, and implement their technical ideas.</p>
+        </div>
+    </section>
+    <section id="achievement">
+        <div class="content">
 
-
-            <h1 class="style" id="achievement">Achievement </h1>
+            <h1 class="style">Achievement </h1>
 
             <h3> best Lab of the Year 2025</h3>
             <p>Awared for excellence in education and resource management at Arsi University
@@ -249,11 +253,11 @@
                 <div style="display: inline-flex;">
                     <div>
                         <h3> Links</h3>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="https://www.arsiuniversity.edu" target="_blank">Arsi University</a></li>
 
-                        <li><a href=" #home ">Home</a></li>
-                        <li><a href="#about ">About</a></li>
-                        <li><a href="#services ">Services</a></li>
-                        <li><a href="https://www.arsiuniversity.edu " target="_blank ">Arsi University</a></li>
+
                     </div>
 
 
@@ -286,7 +290,7 @@
                 <div>
                     <h3>Subscription</h3>
                     <form>
-                        <label for="newsletter ">Subscribe to our newsletter:</label>
+                        <label for="newsletter">Subscribe to our newsletter:</label>
                         <br>
                         <br>
                         <input type="email " id="newsletter " placeholder="Enter your email " required>
@@ -318,18 +322,18 @@
             <p>Follow us on social media for updates and events.</p>
         </div>
 
+
+
         <div>
-
-            <div>
-                <div class="copyright ">
-                    <p>
-                        Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
-                    <div class="logo ">
-                        <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
-                    </div>
-
+            <div class="copyright ">
+                <p>
+                    Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
+                <div class="logo ">
+                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
                 </div>
+
             </div>
+        </div>
     </footer>
 </body>
 
