--- a/index.html
+++ b/index.html
@@ -69,63 +69,32 @@
         </p>
     </section>
     <!-- Service -->
-    <section class="services-section" id="service">
-        <h2>Our Services</h2>
-        <p>Explore the wide range of services we offer at our computer lab to support your learning and projects.
-        </p>
+    <section class="services-section">
+        <h1>Services We Provide</h1>
+        <p>Explore the variety of computer lab services we offer at ASTU Community School to empower students in technology.</p>
 
         <div class="services-container">
-            <!-- Service 1: Computer Access -->
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-image">
-                        <img src="" alt="Computer Access">
-                    </div>
-                    <div class="service-note">
-                        <h3 class="service-title">Computer Access</h3>
-                        <p class="service-description">High-performance computers available for research, programming, and general use. Whether you are working on a class project, conducting online research, or practicing coding, our systems are designed to meet your needs.</p>
-                    </div>
-                </div>
+            <div class="service-box">
+                <h3>Hardware Setup</h3>
+                <p>Assistance in assembling and configuring computer systems for optimal performance.</p>
+                <a href="#">Learn More</a>
             </div>
-
-            <!-- Service 2: High-Speed Internet -->
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-card">
-                        <div class="service-icon">📡</div>
-                        <h3 class="service-title">High-Speed Internet</h3>
-                        <p class="service-description">Enjoy seamless browsing and downloads with our fast and secure internet connection. Ideal for streaming educational videos, attending online courses, or downloading essential materials without interruptions.</p>
-                    </div>
-                </div>
+            <div class="service-box">
+                <h3>Software Installation</h3>
+                <p>Guidance on installing essential educational software and troubleshooting issues.</p>
+                <a href="#">Learn More</a>
             </div>
-
-            <!-- Service 3: Software Tutorials -->
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-image">
-                        <img src="" alt="Software Tutorials">
-                    </div>
-                    <div class="service-note">
-                        <h3 class="service-title">Software Tutorials</h3>
-                        <p class="service-description">Get guidance and tutorials on popular software and programming tools. Our tutorials cover beginner to advanced levels, including topics like word processing, spreadsheets, and coding languages.</p>
-                    </div>
-                </div>
+            <div class="service-box">
+                <h3>Programming Tutorials</h3>
+                <p>Interactive sessions to learn coding languages like Python, Java, and HTML.</p>
+                <a href="#">Learn More</a>
             </div>
-
-            <!-- Service 4: Technical Support -->
-            <div class="service-card">
-                <div class="service-content">
-                    <div class="service-image">
-                        <img src="" alt="Technical Support">
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">🔧</div>
-                        <h3 class="service-title">Technical Support</h3>
-                        <p class="service-description">Our experts are here to assist with hardware or software issues. Whether it’s troubleshooting a problem or providing advice on upgrades, we’ve got you covered.
-                        </p>
-                    </div>
-                </div>
+            <div class="service-box">
+                <h3>Project Assistance</h3>
+                <p>Support for students working on tech-based academic and personal projects.</p>
+                <a href="#">Learn More</a>
             </div>
+        </div>
     </section>
     <!-- schedule section -->
     <section id="schedule">
