--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- Service -->
     <section class="services-section">
         <h1>Services We Provide</h1>
-        <p>Explore the variety of computer lab services we offer at ASTU Community School to empower students in technology.</p>
+        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.</p>
 
         <div class="services-container">
             <div class="service-box">
