add css on about

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <li><a href="#achievement">Achievement</a></li>
 
-                <li> <a href=" # ">Student</a></li>
+                <li> <a href="HTML/index.html">Student</a></li>
 
                 <li><a href="#schedule">Schedule</a></li>
             </ul>
@@ -56,17 +56,24 @@
     </section>
 
     <!-- About section -->
-    <section id="about">
+    <section class="about-section">
+        <div class="about-content">
 
-        <h2>About Us</h2>
-        <p>
+
+            <h1>About Us</h1>
+
             The Arsi University Computer Lab Management System is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks
             lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
-        </p>
-        <p>
-            The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
-            is a cornerstone of modern education at Arsi University.
-        </p>
+            </p>
+            <p>
+                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
+                is a cornerstone of modern education at Arsi University.
+            </p>
+        </div>
+        <div class="about-image">
+            <!-- Replace the URL with the actual image -->
+            <img src="image/banner2.jpg" alt="Computer Lab">
+        </div>
     </section>
     <!-- Service -->
     <section class="services-section">
