--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div id="home">
             <div>
                 <h2 class="text">Welcome to Arsi University Computer Lab Website</h2>
-                <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.</p>
+                <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.
+                </p>
             </div>
         </div>
     </section>
@@ -60,13 +61,18 @@
         <div class="about-content">
 
 
-            <h1>About Us</h1>
+            <h1 id="about">About Us</h1>
 
-            The Arsi University Computer Lab Management System is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks
-            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
+            The Arsi University Computer Lab Management System is designed to enhance the experience of students and
+            staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a
+            platform that not only schedules and tracks
+            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning
+            and research.
             </p>
             <p>
-                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
+                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and
+                fostering collaboration among students and faculty members. With a commitment to promoting digital
+                literacy and technological excellence, our lab system
                 is a cornerstone of modern education at Arsi University.
             </p>
         </div>
@@ -76,9 +82,10 @@
         </div>
     </section>
     <!-- Service -->
-    <section class="services-section">
+    <section class="services-section" id="service">
         <h1>Services We Provide</h1>
-        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.</p>
+        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in
+            technology.</p>
 
         <div class="services-container">
             <div class="service-box">
@@ -231,7 +238,7 @@
                         <h3> Links</h3>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="https://www.arsiuniversity.edu" target="_blank">Arsi University</a></li>
+                        <li><a href="https://https://arsiun.edu.et" target="_blank">Arsi University</a></li>
 
 
                     </div>
@@ -243,7 +250,7 @@
                         <h3>Contact Us</h3>
 
                         <p>Email: support@arsiuniversity.edu</p>
-                        <p>Phone: +123-456-7890</p>
+                        <p>Phone: +251-222-38-0252</p>
                     </div>
 
                 </div>
@@ -305,7 +312,8 @@
                 <p>
                     Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
                 <div class="logo ">
-                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
+                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png "
+                            alt="github Logo " style="border-radius: 50%; " /></a>
                 </div>
 
             </div>
