--- a/index.html
+++ b/index.html
@@ -58,27 +58,18 @@
 
     <!-- About section -->
     <section class="about-section">
-        <div class="about-content">
-
-
-            <h1 id="about">About Us</h1>
-
-            The Arsi University Computer Lab Management System is designed to enhance the experience of students and
-            staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a
-            platform that not only schedules and tracks
-            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning
-            and research.
-            </p>
-            <p>
-                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and
-                fostering collaboration among students and faculty members. With a commitment to promoting digital
-                literacy and technological excellence, our lab system
-                is a cornerstone of modern education at Arsi University.
-            </p>
-        </div>
         <div class="about-image">
-            <!-- Replace the URL with the actual image -->
-            <img src="image/banner2.jpg" alt="Computer Lab">
+            <img src="./image/banner4.jpg" alt="Computer Lab">
+        </div>
+        <div class="about-content">
+            <h3>About Us</h3>
+            <h1>We Empower Innovation</h1>
+            <p>
+                At Arsi University, our computer lab is a hub of creativity and technology, equipping students with the skills 
+                and tools to excel in the digital era. From programming workshops to collaborative projects, we foster innovation, 
+                problem-solving, and technical expertise.
+            </p>
+            <a href="#" class="btn-contact">Contact Us</a>
         </div>
     </section>
     <!-- Service -->
