--- a/index.html
+++ b/index.html
@@ -99,6 +99,26 @@
                 <p>Support for students working on tech-based academic and personal projects.</p>
                 <a href="#">Learn More</a>
             </div>
+            <div class="service-box">
+                <h3>Cybersecurity Awareness</h3>
+                <p>Workshops to educate students about safe online practices and protecting their data.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="service-box">
+                <h3>Networking Basics</h3>
+                <p>Hands-on training to understand computer networking, troubleshooting, and configuration.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="service-box">
+                <h3>Database Management</h3>
+                <p>Training on how to design, manage, and maintain databases for academic and professional use.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="service-box">
+                <h3>Graphic Design Basics</h3>
+                <p>Workshops to teach students the fundamentals of graphic design using industry-standard tools.</p>
+                <a href="#">Learn More</a>
+            </div>
         </div>
     </section>
     <!-- schedule section -->
