--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
 
     <!-- About section -->
-    <section class="about-section">
+    <section class="about-section" id="about">
         <div class="about-content">
 
 
@@ -243,7 +243,7 @@
                         <h3>Contact Us</h3>
 
                         <p>Email: support@arsiuniversity.edu</p>
-                        <p>Phone: +123-456-7890</p>
+                        <p>Phone: +251-222-38-0252</p>
                     </div>
 
                 </div>
