--- a/index.html
+++ b/index.html
@@ -50,18 +50,17 @@
         <div id="home">
             <div>
                 <h2 class="text">Welcome to Arsi University Computer Lab Website</h2>
-                <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.
-                </p>
+                <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.</p>
             </div>
         </div>
     </section>
 
     <!-- About section -->
-    <section class="about-section" id="about">
+    <section class="about-section">
         <div class="about-content">
 
 
-            <h1>About Us</h1>
+            <h1 id="about">About Us</h1>
 
             The Arsi University Computer Lab Management System is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks
             lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
@@ -72,52 +71,35 @@
             </p>
         </div>
         <div class="about-image">
-            <img src="./image/banner4.jpg" alt="Computer Lab">
-        </div>
-        <div class="about-content">
-            <h3>About Us</h3>
-            <h1>We Empower Innovation</h1>
-            <p>
-                At Arsi University, our computer lab is a hub of creativity and technology, equipping students with the skills and tools to excel in the digital era. From programming workshops to collaborative projects, we foster innovation, problem-solving, and technical
-                expertise.
-            </p>
-            <a href="#" class="btn-contact">Contact Us</a>
+            <!-- Replace the URL with the actual image -->
+            <img src="image/banner2.jpg" alt="Computer Lab">
         </div>
     </section>
     <!-- Service -->
     <section class="services-section">
         <h1>Services We Provide</h1>
-        <p>Explore the variety of computer lab services we offer at ASTU Community School to empower students in technology.</p>
+        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.</p>
 
         <div class="services-container">
-            <!-- Service 1 -->
             <div class="service-box">
                 <h3>Hardware Setup</h3>
                 <p>Assistance in assembling and configuring computer systems for optimal performance.</p>
-                <details>
-                    <summary>Learn More</summary>
-                    <p>Our team provides expert guidance in hardware setup, ensuring that students and staff can optimize their computers' performance. We assist with assembling PCs, configuring devices, and troubleshooting hardware issues.</p>
-                </details>
+                <a href="#">Learn More</a>
             </div>
-
-            <!-- Service 2 -->
             <div class="service-box">
                 <h3>Software Installation</h3>
                 <p>Guidance on installing essential educational software and troubleshooting issues.</p>
-                <details>
-                    <summary>Learn More</summary>
-                    <p>We help students and staff install critical software like operating systems, development tools, and educational programs. Our service also covers troubleshooting to ensure smooth software operation.</p>
-                </details>
+                <a href="#">Learn More</a>
             </div>
-
-            <!-- Service 3 -->
             <div class="service-box">
-                <h3>Database Management</h3>
-                <p>Training on how to design, manage, and maintain databases for academic and professional use.</p>
-                <details>
-                    <summary>Learn More</summary>
-                    <p>Our database management training equips students with skills in database creation, optimization, and querying. Learn how to use MySQL, MongoDB, and other database technologies effectively.</p>
-                </details>
+                <h3>Programming Tutorials</h3>
+                <p>Interactive sessions to learn coding languages like Python, Java, and HTML.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="service-box">
+                <h3>Project Assistance</h3>
+                <p>Support for students working on tech-based academic and personal projects.</p>
+                <a href="#">Learn More</a>
             </div>
         </div>
     </section>
@@ -249,7 +231,7 @@
                         <h3> Links</h3>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="https://https://arsiun.edu.et" target="_blank">Arsi University</a></li>
+                        <li><a href="https://www.arsiuniversity.edu" target="_blank">Arsi University</a></li>
 
 
                     </div>
@@ -261,7 +243,7 @@
                         <h3>Contact Us</h3>
 
                         <p>Email: support@arsiuniversity.edu</p>
-                        <p>Phone: +251-222-38-0252</p>
+                        <p>Phone: +123-456-7890</p>
                     </div>
 
                 </div>
