add photo on second tml

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,6 +17,11 @@
     <section>
         <h1>Information System</h1>
     </section>
+    <!-- formset section -->
+    <section>
+
+    </section>
+
 </body>
 
 </html>
