--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,6 +18,9 @@
         <h1>Information System</h1>
     </section>
     <!-- formset section -->
+    <iframe src="Image/togther.jpg" frameborder="2" width="500px" height="500px"></iframe>
+    <iframe src="https://www.evangadi.com" frameborder="0" width="750px" height="500px"></iframe>
+    <iframe src="vidi" frameborder="0"></iframe>
     <section>
 
     </section>
