add login and styles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div id="home">
             <div>
                 <h2 class="text">Welcome to Arsi University Computer Lab Website</h2>
-                <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.</p>
+                <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.
+                </p>
             </div>
         </div>
     </section>
@@ -62,11 +63,16 @@
 
             <h1 id="about">About Us</h1>
 
-            The Arsi University Computer Lab Management System is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks
-            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
+            The Arsi University Computer Lab Management System is designed to enhance the experience of students and
+            staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a
+            platform that not only schedules and tracks
+            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning
+            and research.
             </p>
             <p>
-                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
+                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and
+                fostering collaboration among students and faculty members. With a commitment to promoting digital
+                literacy and technological excellence, our lab system
                 is a cornerstone of modern education at Arsi University.
             </p>
         </div>
@@ -78,7 +84,8 @@
     <!-- Service -->
     <section class="services-section">
         <h1>Services We Provide</h1>
-        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.</p>
+        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in
+            technology.</p>
 
         <div class="services-container">
             <div class="service-box">
@@ -188,6 +195,8 @@
             <p>Partnered with leading companies like Microsoft and Google for events and internships.</p>
         </div>
     </section>
+
+
     <!-- Form/Contact Secion -->
     <section>
 
@@ -213,8 +222,8 @@
                 <br>
                 <input type="submit" value="send message" id="button">
             </form>
-
         </div>
+        <p style="text-align: center;">Please create your Email <a href="login.html">login here</a></p>
     </section>
 
 
@@ -305,7 +314,8 @@
                 <p>
                     Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
                 <div class="logo ">
-                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
+                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png "
+                            alt="github Logo " style="border-radius: 50%; " /></a>
                 </div>
 
             </div>
