change header style and  change frame photo

--- a/index.html
+++ b/index.html
@@ -13,35 +13,40 @@
     <header>
         <!-- header -->
         <nav class="header-nav">
+            <div class="internal-wrapper header-links">
+                <div class="logo-wrapper">
+                    <div class="logo">
+                        <img src="image/logo.jpg" alt="arsi university" style="border-radius: 50%;">
+                    </div>
+                    <div>
+                        <h1>Arsi University Computer Lab</h1>
+                    </div>
+                </div>
 
-            <div class="logo-wrapper">
-                <div class="logo">
-                    <img src="image/logo.jpg" alt="arsi university" style="border-radius: 50%;">
-                </div>
-                <div>
-                    <h1>Arsi University Computer Lab</h1>
-                </div>
+                <ul class="ul-wrapper">
+                    <li><a href="#home">Home</a></li>
+
+
+                    <li> <a href="#about">About</a></li>
+
+
+                    <li><a href="#contact">Contact</a></li>
+
+
+                    <li><a href="#service">Service</a></li>
+
+                    <li><a href="#goal">Goal</a></li>
+
+                    <li><a href="#achievement">Achievement</a></li>
+
+                    <li> <a href="HTML/index.html">Student</a></li>
+
+                    <li><a href="#schedule">Schedule</a></li>
+                </ul>
+
             </div>
-            <ul class="internal-wrapper header-links">
-                <li><a href="#home">Home</a></li>
 
 
-                <li> <a href="#about">About</a></li>
-
-
-                <li><a href="#contact">Contact</a></li>
-
-
-                <li><a href="#service">Service</a></li>
-
-                <li><a href="#goal">Goal</a></li>
-
-                <li><a href="#achievement">Achievement</a></li>
-
-                <li> <a href="HTML/index.html">Student</a></li>
-
-                <li><a href="#schedule">Schedule</a></li>
-            </ul>
         </nav>
     </header>
 
@@ -63,16 +68,11 @@
 
             <h1 id="about">About Us</h1>
 
-            The Arsi University Computer Lab Management System is designed to enhance the experience of students and
-            staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a
-            platform that not only schedules and tracks
-            lab usage but also ensures the labs are equipped with cutting-edge technology to support innovative learning
-            and research.
+            The Arsi University Computer Lab Website is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks lab usage
+            but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
             </p>
             <p>
-                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and
-                fostering collaboration among students and faculty members. With a commitment to promoting digital
-                literacy and technological excellence, our lab system
+                The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
                 is a cornerstone of modern education at Arsi University.
             </p>
         </div>
@@ -84,8 +84,8 @@
     <!-- Service -->
     <section class="services-section">
         <h1>Services We Provide</h1>
-        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in
-            technology.</p>
+        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.
+        </p>
 
         <div class="services-container">
             <div class="service-box">
@@ -314,8 +314,7 @@
                 <p>
                     Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
                 <div class="logo ">
-                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png "
-                            alt="github Logo " style="border-radius: 50%; " /></a>
+                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
                 </div>
 
             </div>
