--- a/index.html
+++ b/index.html
@@ -6,32 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Computer Lab</title>
     <link rel="stylesheet" href="CSS/Style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
+<!-- internal css -->
+<style>
+    .internal-css {
+        background-color: cadetblue;
+        border: solid 5px rgba(233, 233, 232, 0.918);
+        padding: 20px;
+        margin: 5px;
+    }
+    
+    .internal-h1 {
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        font-size: 80px;
+        text-align: center;
+    }
+</style>
 
 <body>
-
     <header>
         <!-- header -->
         <nav class="header-nav">
             <div class="internal-wrapper header-links">
                 <div class="logo-wrapper">
                     <div class="logo">
-                        <img src="image/logo.jpg" alt="arsi university" style="border-radius: 50%;">
-                    </div>
-                    <div>
-                        <h1>Arsi University Computer Lab</h1>
+                        <img src="image/logo.jpg" alt="arsi university" style="border-radius: 50%" />
                     </div>
                 </div>
 
                 <ul class="ul-wrapper">
                     <li><a href="#home">Home</a></li>
 
-
-                    <li> <a href="#about">About</a></li>
-
+                    <li><a href="#about">About</a></li>
 
                     <li><a href="#contact">Contact</a></li>
-
 
                     <li><a href="#service">Service</a></li>
 
@@ -39,23 +48,23 @@
 
                     <li><a href="#achievement">Achievement</a></li>
 
-                    <li> <a href="HTML/index.html">Student</a></li>
+                    <li><a href="HTML/index.html">Student</a></li>
 
                     <li><a href="#schedule">Schedule</a></li>
                 </ul>
-
             </div>
-
-
         </nav>
     </header>
-
+    <div class="internal-css">
+        <h1 class="internal-h1">Arsi University Computer Lab</h1>
+    </div>
     <section>
         <!-- Home section -->
         <div id="home">
             <div>
-                <h2 class="text">Welcome to Arsi University Computer Lab Website</h2>
-                <p class="text2">This website helps connect computer labs efficiently and effectively to a web server.
+                <h2 class="text">Welcome to Arsi University Computer Lab</h2>
+                <p class="text2">
+                    This website helps connect computer labs efficiently and effectively to a web server.
                 </p>
             </div>
         </div>
@@ -64,12 +73,11 @@
     <!-- About section -->
     <section class="about-section">
         <div class="about-content">
+            <h2 id="about ">About Us</h2>
 
-
-            <h1 id="about">About Us</h1>
-
-            The Arsi University Computer Lab Website is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks lab usage
-            but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
+            <p>
+                The Arsi University Computer Lab Website is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks lab usage
+                but also ensures the labs are equipped with cutting-edge technology to support innovative learning and research.
             </p>
             <p>
                 The system offers a user-friendly interface for managing lab schedules, monitoring equipment, and fostering collaboration among students and faculty members. With a commitment to promoting digital literacy and technological excellence, our lab system
@@ -78,40 +86,49 @@
         </div>
         <div class="about-image">
             <!-- Replace the URL with the actual image -->
-            <img src="image/banner2.jpg" alt="Computer Lab">
+            <img src="image/banner2.jpg " alt="Computer Lab " />
         </div>
     </section>
     <!-- Service -->
     <section class="services-section">
-        <h1>Services We Provide</h1>
-        <p>Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.
+        <h2>Services We Provide</h2>
+        <p>
+            Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.
         </p>
 
         <div class="services-container">
             <div class="service-box">
                 <h3>Hardware Setup</h3>
-                <p>Assistance in assembling and configuring computer systems for optimal performance.</p>
-                <a href="#">Learn More</a>
+                <p>
+                    Assistance in assembling and configuring computer systems for optimal performance.
+                </p>
+                <a href="# ">Learn More</a>
             </div>
             <div class="service-box">
                 <h3>Software Installation</h3>
-                <p>Guidance on installing essential educational software and troubleshooting issues.</p>
-                <a href="#">Learn More</a>
+                <p>
+                    Guidance on installing essential educational software and troubleshooting issues.
+                </p>
+                <a href="# ">Learn More</a>
             </div>
             <div class="service-box">
                 <h3>Programming Tutorials</h3>
-                <p>Interactive sessions to learn coding languages like Python, Java, and HTML.</p>
-                <a href="#">Learn More</a>
+                <p>
+                    Interactive sessions to learn coding languages like Python, Java, and HTML.
+                </p>
+                <a href="# ">Learn More</a>
             </div>
             <div class="service-box">
                 <h3>Project Assistance</h3>
-                <p>Support for students working on tech-based academic and personal projects.</p>
-                <a href="#">Learn More</a>
+                <p>
+                    Support for students working on tech-based academic and personal projects.
+                </p>
+                <a href="# ">Learn More</a>
             </div>
         </div>
     </section>
     <!-- schedule section -->
-    <section id="schedule">
+    <section id="schedule ">
         <div class="wrapper">
             <h2 class="lab">Lab Schedule</h2>
             <table>
@@ -149,174 +166,178 @@
     </section>
     <!-- Goals Section -->
 
-    <section class="goal-section" id="goal">
-        <h2 class="style"> Our Goals</h2>
+    <section class="goal-section" id="goal ">
+        <h2 class="style">Our Goals</h2>
         <div class="content">
-            <h3> Provide Access to Cutting-Edge Technology</h3>
-            <p>Ensure students have access to the latest hardware and software for learning and innovation.</p>
-
-
-
-            <h3> Promote Digital Literacy</h3>
-            <p>Offer training programs to enhance programming, cybersecurity, and IT skills.</p>
-
-
-
-            <h3> Foster Industry Collaboration</h3>
-            <p>Build partnerships with tech companies to provide real-world learning opportunities.</p>
-
-
-
-            <h3>Encourage Innovation</h3>
-            <p>Create a platform for students to develop, showcase, and implement their technical ideas.</p>
-        </div>
-    </section>
-    <section id="achievement">
-        <div class="content">
-
-            <h1 class="style">Achievement </h1>
-
-            <h3> best Lab of the Year 2025</h3>
-            <p>Awared for excellence in education and resource management at Arsi University
+            <h3>Provide Access to Cutting-Edge Technology</h3>
+            <p>
+                Ensure students have access to the latest hardware and software for learning and innovation.
             </p>
 
+            <h3>Promote Digital Literacy</h3>
+            <p>
+                Offer training programs to enhance programming, cybersecurity, and IT skills.
+            </p>
 
+            <h3>Foster Industry Collaboration</h3>
+            <p>
+                Build partnerships with tech companies to provide real-world learning opportunities.
+            </p>
 
-            <h3> initiate Successful Projects</h3>
-            <p>Projects developed by students, including apps, websites, and AI models.</p>
-
-
-
-            <h3> Hosted Workshops</h3>
-            <p>Covering topics like programming, cybersecurity, and hardware repair.</p>
-
-
-
-            <p>Partnered with leading companies like Microsoft and Google for events and internships.</p>
+            <h3>Encourage Innovation</h3>
+            <p>
+                Create a platform for students to develop, showcase, and implement their technical ideas.
+            </p>
         </div>
     </section>
+    <section id="achievement ">
+        <div class="content">
+            <h class="style">Achievement</h>
 
+            <h3>best Lab of the Year 2025</h3>
+            <p>
+                Awared for excellence in education and resource management at Arsi University
+            </p>
+
+            <h3>initiate Successful Projects</h3>
+            <p>
+                Projects developed by students, including apps, websites, and AI models.
+            </p>
+
+            <h3>Hosted Workshops</h3>
+            <p>
+                Covering topics like programming, cybersecurity, and hardware repair.
+            </p>
+
+            <p>
+                Partnered with leading companies like Microsoft and Google for events and internships.
+            </p>
+        </div>
+    </section>
 
     <!-- Form/Contact Secion -->
     <section>
-
         <div class="container">
-
-            <form id="contact">
+            <form id="contact ">
                 <h3>Contact form</h3>
-                <input type="text" id="FirstName" placeholder="First Name" required>
-                <br>
-                <br>
-                <input type="text" id="LastName" placeholder="Last Name" required>
-                <br>
-                <br>
-                <input type="email" id="email" placeholder="email" required>
-                <br>
-                <br>
-                <input type="number" id="phonenumber" placeholder="phone number" required>
-                <br>
-                <br>
+                <input type="text" id="FirstName" placeholder="First Name" required />
+                <br />
+                <br />
+                <input type="text" id="LastName" placeholder="Last Name" required />
+                <br />
+                <br />
+                <input type="email " id="email " placeholder="email " required />
+                <br />
+                <br />
+                <input type="number" id="phonenumber" placeholder="phone number" required />
+                <br />
+                <br />
                 <h4>Type your comment here....</h4>
-                <textarea name="" id="add" cols="100" rows="15"></textarea>
-                <br>
-                <br>
-                <input type="submit" value="send message" id="button">
+                <textarea name=" " id="add" cols="100" rows="15 "></textarea>
+                <br />
+                <br />
+                <input type="submit" value="send message" id="button " />
             </form>
+            <p style="text-align: center;background-color: #4dcc57;"> Please create your Email <a href="login.html ">login here</a>
+            </p>
         </div>
-        <p style="text-align: center;">Please create your Email <a href="login.html">login here</a></p>
     </section>
 
+    <br />
+    <br />
 
-    <br>
-    <br>
-
-    <footer style="border: solid 5px rgb(243, 240, 240);">
-
+    <footer style="border: solid 5px rgb(243, 240, 240)">
         <!-- footer section -->
-        <div class="footer-wrapper">
-            <div class="internal-footer">
-                <div style="display: inline-flex;">
-                    <div>
-                        <h3> Links</h3>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="https://www.arsiuniversity.edu" target="_blank">Arsi University</a></li>
-
-
-                    </div>
-
-
-                </div>
-                <div style="display: inline-flex;">
-                    <div>
-                        <h3>Contact Us</h3>
-
-                        <p>Email: support@arsiuniversity.edu</p>
-                        <p>Phone: +123-456-7890</p>
-                    </div>
-
-                </div>
-                <div style="display: inline-flex;">
-                    <div>
-                        <h3>Social Media Links</h3>
-                        <li> <a href=" https://facebook.com/arsiuniversity " target="_blank ">Facebook</a></li>
-                        <li> <a href="https://twitter.com/arsiuniversity " target="_blank ">Twitter</a></li>
-                        <li> <a href="https://linkedin.com/school/arsiuniversity " target="_blank ">LinkedIn</a>
-                        </li>
-
-
-
-
-                    </div>
-
-                </div>
-
-
-                <div>
-                    <h3>Subscription</h3>
-                    <form>
-                        <label for="newsletter">Subscribe to our newsletter:</label>
-                        <br>
-                        <br>
-                        <input type="email " id="newsletter " placeholder="Enter your email " required>
-                        <br>
-                        <br>
-                        <button type="submit ">Subscribe</button>
-                    </form>
-                </div>
-
-
-
-                <div>
-                    <h2>Location</h2>
-                    <p>Arsi University</p>
-
-                    <li><a href="https://maps.app.goo.gl/ZqdzbsXYDTTjqF1CA " target="_blank ">View on Map</a></li>
-
-                </div>
-
-
-                <div>
-                    <h3>Privacy Policy & Terms</h3>
-                    <li> <a href="privacy-policy.html ">Privacy Policy</a></li>
-                    <li> <a href="terms-of-service.html ">Terms of Service</a></li>
-
-
-                </div>
+        <div class="footer-bgc">
+            <div class="footer-wrapper">
+                <div class="internal-footer">
+                    <div style="display: inline-flex">
+                        <div>
+                            <h3>Links</h3>
+                            <li><a href="#home ">Home</a></li>
+                            <li><a href="#about ">About</a></li>
+                            <li>
+                                <a href="https://www.arsiuniversity.edu " target="_blank ">Arsi University</a
+                  >
+                </li>
+              </div>
             </div>
-            <p>Follow us on social media for updates and events.</p>
+            <div style="display: inline-flex">
+              <div>
+                <h3>Contact Us</h3>
+
+                <p>Email: support@arsiuniversity.edu</p>
+                <p>Phone: +123-456-7890</p>
+              </div>
+            </div>
+            <div style="display: inline-flex">
+              <div class="social-icons">
+                <h3>Social Media Links</h3>
+                <li>
+                  <a href="https://www.facebook.com/kelbessa.adugna" target="_blank" style="font-size: 40px;title="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                            </li>
+                            <li>
+                                <a href="https://x.com/home" target="_blank" style="font-size: 40px; title=" Twitter ">
+                                    <i class="fab fa-twitter "></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/kelbessa95?igsh=YzljYTk1ODg3Zg==" target=" _self " style="font-size: 40px;title=" Instagram ">
+                                    <i class="fab fa-instagram "></i>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git " target="_parent " style="font-size: 40px; " title=" GitHub ">
+                                    <i class="fab fa-github "></i>
+                                </a>
+                            </li>
+                        </div>
+                    </div>
+
+                    <div>
+                        <h3>Subscription</h3>
+                        <form>
+                            <label for="newsletter ">Subscribe to our newsletter:</label>
+                            <br />
+                            <br />
+                            <input type="email " id="newsletter " placeholder="Enter your email " required />
+                            <br />
+                            <br />
+                            <button type="submit ">Subscribe</button>
+                        </form>
+                    </div>
+
+                    <div>
+                        <h2>Location</h2>
+                        <p>Arsi University</p>
+
+                        <li>
+                            <a href="https://maps.app.goo.gl/ZqdzbsXYDTTjqF1CA " target="_blank ">View on Map</a
+                >
+              </li>
+            </div>
+
+            <div>
+              <h3>Privacy Policy & Terms</h3>
+              <li><a href="privacy-policy.html ">Privacy Policy</a></li>
+                        <li><a href="terms-of-service.html ">Terms of Service</a></li>
+                    </div>
+                </div>
+                <p style="padding: 20px 0; margin-top: 20px; text-align: center ">
+                    Follow us on social media for more updates and events.
+                </p>
+            </div>
         </div>
 
-
-
-        <div>
-            <div class="copyright ">
-                <p>
-                    Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5 </p>
-                <div class="logo ">
-                    <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git "><img src="image/github.png " alt="github Logo " style="border-radius: 50%; " /></a>
-                </div>
-
+        <div class="copyright ">
+            <p style="color: rgb(77, 14, 14) ">
+                Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5
+            </p>
+            <div class="logo-footer ">
+                <img src="image/github.png " alt="github Logo " style="border-radius: 50% " />
             </div>
         </div>
     </footer>
