--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
                 <br />
                 <input type="submit" value="send message" id="button " />
             </form>
-            <p style="text-align: center;background-color: #4dcc57;"> Please create your Email <a href="login.html ">login here</a>
+            <p style="text-align: center; background-color: #4dcc57">
+                Please create your Email <a href="login.html ">login here</a>
             </p>
         </div>
     </section>
@@ -274,24 +275,29 @@
               <div class="social-icons">
                 <h3>Social Media Links</h3>
                 <li>
-                  <a href="https://www.facebook.com/kelbessa.adugna" target="_blank" style="font-size: 40px;title="Facebook">
+                  <a
+                    href="https://www.facebook.com/kelbessa.adugna"
+                    target="_blank"
+                    style="font-size: 40px"
+                    title="Facebook"
+                  >
                     <i class="fab fa-facebook-f"></i>
                   </a>
                             </li>
                             <li>
-                                <a href="https://x.com/home" target="_blank" style="font-size: 40px; title=" Twitter ">
-                                    <i class="fab fa-twitter "></i>
+                                <a href="https://x.com/home" target="_blank" style="font-size: 40px" title=" Twitter ">
+                                    <i class="fab fa-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/kelbessa95?igsh=YzljYTk1ODg3Zg==" target=" _self " style="font-size: 40px;title=" Instagram ">
-                                    <i class="fab fa-instagram "></i>
+                                <a href="https://www.instagram.com/kelbessa95?igsh=YzljYTk1ODg3Zg==" target=" _self " style="font-size: 40px" title=" Instagram ">
+                                    <i class="fab fa-instagram"></i>
                                 </a>
                             </li>
 
                             <li>
-                                <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git " target="_parent " style="font-size: 40px; " title=" GitHub ">
-                                    <i class="fab fa-github "></i>
+                                <a href="https://github.com/Kelbessa02/WebProgrammingGroup-5.git " target="_parent " style="font-size: 40px" title=" GitHub ">
+                                    <i class="fab fa-github"></i>
                                 </a>
                             </li>
                         </div>
@@ -303,10 +309,10 @@
                             <label for="newsletter ">Subscribe to our newsletter:</label>
                             <br />
                             <br />
-                            <input type="email " id="newsletter " placeholder="Enter your email " required />
+                            <input type="email " id="email" placeholder="Enter your email " required />
                             <br />
                             <br />
-                            <button type="submit ">Subscribe</button>
+                            <button type="submit" id="email">Subscribe</button>
                         </form>
                     </div>
 
@@ -326,18 +332,18 @@
                         <li><a href="terms-of-service.html ">Terms of Service</a></li>
                     </div>
                 </div>
-                <p style="padding: 20px 0; margin-top: 20px; text-align: center ">
+                <p style="padding: 20px 0; margin-top: 20px; text-align: center">
                     Follow us on social media for more updates and events.
                 </p>
             </div>
         </div>
 
-        <div class="copyright ">
-            <p style="color: rgb(77, 14, 14) ">
+        <div class="copyright">
+            <p style="color: rgb(77, 14, 14)">
                 Copyright ©2025 Group-5 (ComputerLab) All Rights Reserved. Made by Computer Science Group-5
             </p>
-            <div class="logo-footer ">
-                <img src="image/github.png " alt="github Logo " style="border-radius: 50% " />
+            <div class="logo-footer">
+                <img src="image/github.png " alt="github Logo " style="border-radius: 50%" />
             </div>
         </div>
     </footer>
